--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,8 @@
 <nav><ul>
         {% for item in site.data.navigation %}
-            <li><a href="{{ item.link }}">{{ item.name }}</a></li>
+            <li><a 
+                href="{{ item.link }}" 
+                {% if page.url == item.link %}class="current-link"{% endif %}
+            >{{ item.name }}</a></li>
         {% endfor %}
 </ul></nav>
