--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,10 @@
         <link rel="stylesheet" href="/assets/css/main.css">
     </head>
     <body>
-        {% include navigation.html %}
+        <header>
+            {% include navigation.html %}
+        </header>
+        
         <div class="container">
             {{ content }}
         </div>
